# hubbub

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
compiler/: Cargo.toml
compiler/src/: analyze.rs  bindings.rs  builtin.rs  error.rs  jit.rs  link.rs  main.rs  output.rs  parse.rs  tests.rs  tokenize.rs  translator.rs  typecheck.rs  types.rs  utils.rs  workspace.rs
compiler/src/tests/: input.rs  mod.rs  test_amd64.rs  test_jit.rs  test_parse.rs  test_type.rs
compiler/src/translate/: cranelift.rs  input.rs  llvm.rs  mod.rs
examples/: array.hb  boolean.hb  constants.hb  extern.hb  infer.hb  list.hb  loop.hb  main.hb  module.hb  opengl.hb  pointer.hb  recursion.hb  simple.hb  structs.hb  test.hb  unicode.hb
examples/tests/: array.hb  assign.hb  boolean.hb  builtin.hb  fibonacci.hb  if_else.hb  ifelse.hb  ifx.hb  infercall.hb  multiple.hb  negation.hb  overload.hb  parapoly.hb  parapoly2.hb  parapoly3.hb  pointer.hb  polystructs.hb  sharedlib.hb  string.hb  structs.hb  unicode.hb  whileloop.hb  xorshift.hb
modules/: ArrayList.hb  Base.hb  C.hb  GL.hb  GLFW.hb  List.hb  Math.hb  Prelude.hb  Strings.hb
runtime/src/: lib.rs
test_shared/: Cargo.toml
test_shared/src/: lib.rs
