[package]
name = "hubbub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0"
codespan-reporting = "0.11.1"
colored = "2.0.0"
cranelift = "0.89.1"
cranelift-jit = "0.89.1"
cranelift-module = "0.89.1"
cranelift-object = "0.89.1"
dlopen = "0.1.8"
iced-x86 = { version = "1.18.0", features = ["code_asm"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
phf = { version = "0.11.0", features = ["macros"] }
smallvec = "1.9.0"
target-lexicon = "0.12.4"
unicode-ident = "1.0.3"
